src/objects/GBLite__GridBuddy_Usage_Analytics__c.object
<CustomObject>
    <fields>
        <fullName>GBLite__Field_Count__c</fullName>
        <label>Fields Edited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GBLite__Field_Labels__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Labels</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__Grid_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grid Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Grid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grid</label>
        <referenceTo>GBLite__GridBuddySettings__c</referenceTo>
        <relationshipLabel>GridBuddy Usage Analytics (Grid)</relationshipLabel>
        <relationshipName>GridBuddy_Usage_Analytics1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBLite__Session__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Session</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GridBuddy_Usage_Analytics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GridBuddy Usage Analytics</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>GridBuddy Usage Analytics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GridBuddy Usage Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>